fixing critical sonarlint errors